# openfare-js

./: Cargo.toml  stdout.json
.github/workflows/: main.yaml
src/: bin.rs  lib.rs
src/commands/: fs_defined_dependencies_configs.rs  fs_defined_dependencies_locks.rs  mod.rs  package_dependencies_configs.rs  package_dependencies_locks.rs  project_dependencies_locks.rs
src/commands/common/: mod.rs  npm.rs
src/registries/: mod.rs  npm.rs
